2010-01-25 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Remove trailing space after IcedTea version
	in plugin version information when package
	version is not set.
	
2010-05-18 Andrew John Hughes  <ahughes@redhat.com>

	* patches/boot/scanner-charsets.patch:
	Patch openjdk-boot not openjdk.

2010-05-17 Andrew John Hughes  <ahughes@redhat.com>

	* patches/boot/icedtea-dbcs.patch,
	* patches/boot/icedtea-sbcs.patch,
	* patches/boot/icedtea-spp.patch:
	Renamed to relate to java.util.Scanner.
	* Makefile.am: Fix paths above and add
	new patch.
	* patches/boot/scanner-charsets.patch:
	New patch to remove Scanner usage in
	charsetmapping tool.
	* patches/boot/scanner-dbcs.patch,
	* patches/boot/scanner-sbcs.patch,
	* patches/boot/scanner-spp.patch:
	Collect together all patches to avoid use
	of java.util.Scanner.

2010-05-17 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(stamps/extract-jaxws.stamp): Use absolute
	path to stamps.

2010-05-17 Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	Remove duplicate IT_XULRUNNER_VERSION macro.

2010-01-22  Deepak Bhole <dbhole@redhat.com>

	* Makefile.am:
	Use MOZILLA_CFLAGS/LIBS rather than
	XULRUNNER.
	* plugin/icedteanp/IcedTeaNPPlugin.cc:
	Use PRInt32 rather than PRInt32_t for port.

2010-01-25 Andrew John Hughes  <ahughes@redhat.com>

	* IcedTeaPlugin.cc:
	Standardise plugin versioning.
	* Makefile.am:
	Set ICEDTEA_NAME and use in place of literal
	"IcedTea7".  Use HAS_PKGVERSION to set ICEDTEA_PKG
	and output DISTRO_PACKAGE_VERSION rather than
	running test.  Set PLUGIN_VERSION and use for
	both plugins.
	* acinclude.m4:
	(IT_GET_PKGVERSION): Moved from configure.ac and
	changed to a macro with output.
	(IT_GET_LSB_DATA): Depend on IT_GET_PKGVERSION.
	* configure.ac:
	Invoke new IT_GET_PKGVERSION macro.
	* plugin/icedteanp/IcedTeaNPPlugin.cc:
	Standardise plugin versioning.

2010-01-25 Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-libraries.patch: