@@ -456,15 +456,15 @@ endif
 JDK_UPDATE_VERSION = $(shell echo $(OPENJDK_VERSION) | sed -e "s/^b//")
 COMBINED_VERSION = $(JDK_UPDATE_VERSION)-$(OPENJDK_VERSION)
 
-ICEDTEA_NAME="IcedTea7"
+ICEDTEA_NAME = IcedTea7
 if HAS_ICEDTEA_REVISION
-ICEDTEA_REV="+${ICEDTEA_REVISION}"
+ICEDTEA_REV = +${ICEDTEA_REVISION}
 endif
 if HAS_PKGVERSION
-ICEDTEA_PKG=" (${PKGVERSION})"
+ICEDTEA_PKG = $(EMPTY) (${PKGVERSION})
 endif
 
-PLUGIN_VERSION=$(ICEDTEA_NAME) $(PACKAGE_VERSION)$(ICEDTEA_REV)$(ICEDTEA_PKG)
+PLUGIN_VERSION = $(ICEDTEA_NAME) $(PACKAGE_VERSION)$(ICEDTEA_REV)$(ICEDTEA_PKG)
 
 ICEDTEA_ENV = \
 	ALT_JDK_IMPORT_PATH="$(ICEDTEA_BOOT_DIR)" \
