@@ -1,3 +1,7 @@
+2010-01-27  Matthias Klose  <doko@ubuntu.com>
+
+	* Makefile.am: Remove quoting from ICEDTEA_NAME ICEDTEA_REV ICEDTEA_PKG.
+
 2010-01-25 Andrew John Hughes  <ahughes@redhat.com>
 
 	* Makefile.am:
